# steam-social

./: .gitignore  CMakeLists.txt  README.md  download-sdk.sh
.github/workflows/: ci-build.yml  release-linux.yml  release-macos.yml  release-source.yml  release-windows.yml  release.yml  upload-cdn.yml  upload-github.yml
os/macos/: Install  notarize.sh
os/windows/: library_win64.manifest
src/: plugin.cpp
